fixed horizontal scroll in the order summary block

--- a/src/app/components/order-page-components/order-page/order-page.component.scss
+++ b/src/app/components/order-page-components/order-page/order-page.component.scss
@@ -285,7 +285,7 @@ button[disabled] {
   @include _380 {
     height: 180px;
   }
-  width: 100px;
+  width: 87px;
   height: 67px;
   object-fit: cover;
   border-radius: 12px;
